# gastropilot-backend

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  VERFAHRENSDOKUMENTATION_SUMUP.md  coverage.json  docker-compose.yml  env.example  pyproject.toml  pytest.ini  requirements.txt  reservation_dev.db
services/ai/: .env.example  Dockerfile  pyproject.toml
services/ai/app/: main.py
services/ai/app/core/: config.py
services/ai/app/engines/: menu_recommender.py  peak_predictor.py  revpash.py  seating_ml.py  seating_solver.py
services/ai/app/schemas/: seating_ml.py
services/core/: .env.example  Dockerfile  alembic.ini  pyproject.toml
services/core/alembic/: env.py
services/core/alembic/versions/: 0001_initial_schema.py  0002_remove_license_fields.py  0003_add_missing_models.py  0004_sync_restaurant_billing_fields.py  0005_sync_table_token_fields.py  0006_sync_reservation_reminder_flag.py  0007_sync_guest_profile_auth_fields.py  0008_sync_remaining_core_models.py  0009_add_orders_guest_allergens.py  0010_sync_orders_schema_for_orders_service.py  0011_add_orders_table_ids.py  0012_add_table_day_config_area_id.py  0013_add_order_status_timestamps.py  0014_active_order_uniqueness.py  0014_add_menu_category_type.py  0014_enforce_active_order_uniqueness.py  0015_add_order_item_kitchen_ticket_fields.py  0016_add_fiskaly_tse_tables.py  0017_add_fiskaly_receipt_fields.py  0018_add_fiskaly_org_credentials.py  0019_add_notifications_inbox_table.py  0020_add_fiskaly_cash_point_closings.py  0021_add_closing_is_automatic.py  0022_add_restaurant_business_fields.py  0023_add_payment_terminals.py  0024_add_reservation_invites.py  0025_add_live_activity_tokens.py  0025_add_orders_statistics_indexes.py  0026_drop_reservation_special_requests.py  0027_extend_vouchers_for_restaurant_offers.py  0028_extend_upsell_for_menu_deals.py  0029_add_selected_menu_deal_to_orders.py  0030_order_item_menu_deal_meta.py  0031_add_orders_estimated_completion_at.py  0032_merge_la_eta_heads.py  0033_allergens_jsonb.py  (+4 more)
services/core/app/: main.py
services/core/scripts/: migrate_legacy_data.py
services/core/tests/: test_allergen_service.py  test_guest_reservation_outdoor.py  test_public_reservations_outdoor.py  test_restaurant_geocoding.py
services/notifications/: .env.example  Dockerfile  pyproject.toml
services/notifications/app/: main.py  worker.py
services/notifications/tests/: test_apns_liveactivity.py  test_worker_live_activity_dispatch.py
services/orders/: .env.example  Dockerfile  pyproject.toml
services/orders/app/: main.py  worker.py
services/orders/tests/: test_create_order_totals.py  test_live_activity_endpoints.py  test_order_timing.py  test_parallel_create_order.py
(+233 files in other folders)
