[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gastropilot-ai"
version = "2.0.0"
description = "GastroPilot AI Service"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "redis>=5.2.0",
    "scikit-learn>=1.5.0",
    "numpy>=1.26.0",
    "slowapi>=0.1.9",
    "python-jose[cryptography]>=3.3.0",
    "sentry-sdk[fastapi]>=2.19.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
