[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gastropilot-core"
version = "2.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "PyJWT>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0",
    "python-dotenv>=1.0.0",
    "alembic>=1.13.0",
    "redis>=5.0.0",
    "slowapi>=0.1.9",
    "sentry-sdk[fastapi]>=1.45.0",
    "httpx>=0.27.0",
    "stripe>=10.0.0",
    "python-multipart>=0.0.6",
    "email-validator>=2.0.0",
    "segno>=1.6.6",
    "aioboto3>=13.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
