[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gastropilot-notifications"
version = "2.0.0"
description = "GastroPilot Notifications Service"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
    "twilio>=9.3.0",
    "python-jose[cryptography]>=3.3.0",
    "sentry-sdk[fastapi]>=2.19.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
