[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gastropilot-orders"
version = "2.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "PyJWT>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0",
    "python-dotenv>=1.0.0",
    "redis>=5.0.0",
    "celery>=5.3.0",
    "websockets>=12.0",
    "httpx>=0.27.0",
    "reportlab>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
